chore: configure prisma and nginx and add env.example

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
-SERVER_PURE_GENERAL=3001
+WEB_PURE_DIGITAL_PORT=4201
+SERVER_PURE_GENERAL_PORT=3000
+
+POSTGRES_GENERAL_USER=root
+POSTGRES_GENERAL_PASSWORD=root
+POSTGRES_GENERAL_DB=workspace
+POSTGRES_GENERAL_HOST=localhost
+POSTGRES_GENERAL_PORT=5435
+
+DATABASE_GENERAL_URL="postgresql://${POSTGRES_GENERAL_USER}:${POSTGRES_GENERAL_PASSWORD}@${POSTGRES_GENERAL_HOST}:${POSTGRES_GENERAL_PORT}/${POSTGRES_GENERAL_DB}"
