--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@pure-workspace/data-access": ["libs/data-access/src/index.ts"],
-      "@pure-workspace/domain": ["libs/domain/src/index.ts"]
+      "@pure-workspace/domain": ["libs/domain/src/index.ts"],
+      "@pure-workspace/prisma/general": ["prisma/generated/general"]
     }
   },
   "exclude": ["node_modules", "tmp"]
