feat: add create user use case

--- a/libs/domain/tsconfig.spec.json
+++ b/libs/domain/tsconfig.spec.json
@@ -3,7 +3,12 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node"]
+    "baseUrl": ".",
+    "types": ["jest", "node"],
+    "paths": {
+      "@/*": ["src/lib/*"],
+      "@/test/*": ["src/test/*"]
+    }
   },
   "include": [
     "jest.config.ts",
