feat: add create user route and add zod route validation and ajus dockerfile from server pure general

--- a/configs/docker/Dockerfile.server-pure-general
+++ b/configs/docker/Dockerfile.server-pure-general
@@ -17,8 +17,8 @@ WORKDIR /app
 RUN apk add --no-cache openssl
 
 COPY --from=builder /app/dist/apps/server/server-pure-general ./dist
-#COPY --from=builder /app/dist/libs/domain ./dist
-#COPY --from=builder /app/dist/libs/data-access ./dist
+COPY --from=builder /app/dist/libs/domain ./dist
+COPY --from=builder /app/dist/libs/data-access ./dist
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package*.json ./
 
