--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "nestjs-prisma": "^0.25.0",
     "prisma": "^6.5.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "zod": "^3.24.2"
   }
 }
