--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "lint": "nx format:check --all",
     "lint:write": "nx format:write --all",
     "test": "nx run-many -t test --passWithNoTests",
+    "test:coverage": "npm run test -- --coverage",
+    "prisma:generate:general": "prisma generate --schema=./prisma/general/schema.prisma",
+    "prisma:migrate:general": "npx prisma migrate dev --schema=./prisma/general/schema.prisma",
     "docker": "docker-compose up",
     "docker:postgres": "docker-compose -f docker-compose-postgres.yaml up",
-    "build:server-pure-general": "nx build server-pure-general"
+    "build:server-pure-general": "nx build server-pure-general",
+    "start:server-pure-general": "nx run server-pure-general:serve"
   },
   "private": true,
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@faker-js/faker": "^9.6.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "19.8.14",
@@ -48,8 +53,12 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@prisma/client": "^6.5.0",
     "axios": "^1.6.0",
+    "nestjs-prisma": "^0.25.0",
+    "prisma": "^6.5.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "zod": "^3.24.2"
   }
 }
