--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^6.5.0",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "nestjs-prisma": "^0.25.0",
     "prisma": "^6.5.0",
     "reflect-metadata": "^0.1.13",
