chore: configure docker file from server pure general

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: ./configs/docker/Dockerfile.server-pure-general
     ports:
-      - '${SERVER_PURE_GENERAL}:${SERVER_PURE_GENERAL}'
+      - '${SERVER_PURE_GENERAL_PORT}:${SERVER_PURE_GENERAL_PORT}'
     environment:
       - NODE_ENV=production
     networks:
