--- a/configs/docker/Dockerfile.server-pure-general
+++ b/configs/docker/Dockerfile.server-pure-general
@@ -8,6 +8,7 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
+RUN npm run prisma:generate:general
 RUN npm run build:server-pure-general
 
 FROM node:20-alpine
@@ -18,10 +19,11 @@ RUN apk add --no-cache openssl
 
 COPY --from=builder /app/dist/apps/server/server-pure-general ./dist
 COPY --from=builder /app/dist/libs/domain ./dist
+COPY --from=builder /app/prisma ./prisma
 COPY --from=builder /app/dist/libs/data-access ./dist
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package*.json ./
 
-EXPOSE ${SERVER_PURE_GENERAL}
+EXPOSE ${SERVER_PURE_GENERAL_PORT}
 
 CMD ["sh", "-c", "node /app/dist/main.js"]
