--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
     "eslint": "^9.8.0",
@@ -55,6 +56,7 @@
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^6.5.0",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "nestjs-prisma": "^0.25.0",
     "prisma": "^6.5.0",
     "reflect-metadata": "^0.1.13",
