--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,6 @@ POSTGRES_GENERAL_DB=
 POSTGRES_GENERAL_HOST=
 POSTGRES_GENERAL_PORT=
 
+JWT_SECRET=
+
 DATABASE_GENERAL_URL="postgresql://${POSTGRES_GENERAL_USER}:${POSTGRES_GENERAL_PASSWORD}@${POSTGRES_GENERAL_HOST}:${POSTGRES_GENERAL_PORT}/${POSTGRES_GENERAL_DB}"
