--- a/.env
+++ b/.env
@@ -7,6 +7,9 @@ POSTGRES_GENERAL_DB=workspace
 POSTGRES_GENERAL_HOST=localhost
 POSTGRES_GENERAL_PORT=5435
 
-JWT_SECRET="odeioSerPobre"
+JWT_ACCESS_SECRET="odeioSerPobre"
+JWT_ACCESS_EXPIRATION_IN="60s"
+JWT_REFRESH_SECRET="queroSerRico"
+JWT_REFRESH_EXPIRATION_IN="7d"
 
 DATABASE_GENERAL_URL="postgresql://${POSTGRES_GENERAL_USER}:${POSTGRES_GENERAL_PASSWORD}@${POSTGRES_GENERAL_HOST}:${POSTGRES_GENERAL_PORT}/${POSTGRES_GENERAL_DB}"
