--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
     "eslint": "^9.8.0",
@@ -58,6 +59,7 @@
     "@prisma/client": "^6.5.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "nestjs-prisma": "^0.25.0",
     "prisma": "^6.5.0",
     "reflect-metadata": "^0.1.13",
