--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@swc/helpers": "~0.5.11",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
     "eslint": "^9.8.0",
@@ -52,6 +53,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^11.0.0",
@@ -59,7 +61,9 @@
     "@prisma/client": "^6.5.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "cache-manager-redis-store": "^3.0.1",
     "cookie-parser": "^1.4.7",
+    "ioredis": "^5.6.0",
     "nestjs-prisma": "^0.25.0",
     "prisma": "^6.5.0",
     "reflect-metadata": "^0.1.13",
