--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,15 @@ POSTGRES_GENERAL_DB=
 POSTGRES_GENERAL_HOST=
 POSTGRES_GENERAL_PORT=
 
-JWT_SECRET=
+JWT_ACCESS_SECRET=
+JWT_ACCESS_EXPIRATION_IN=
+JWT_REFRESH_SECRET=
+JWT_REFRESH_EXPIRATION_IN=
+
+REDIS_PORT=
+REDIS_PASSWORD=
+
+REDIS_URL=
+REDIS_EXPIRATION=
 
 DATABASE_GENERAL_URL="postgresql://${POSTGRES_GENERAL_USER}:${POSTGRES_GENERAL_PASSWORD}@${POSTGRES_GENERAL_HOST}:${POSTGRES_GENERAL_PORT}/${POSTGRES_GENERAL_DB}"
