--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.2",
+    "@nx/next": "^20.7.1",
     "@prisma/client": "^6.5.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
