--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@eslint/js": "^9.8.0",
     "@faker-js/faker": "^9.6.0",
     "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.2",
+    "@nestjs/testing": "^11.0.12",
     "@nx/eslint": "19.8.14",
     "@nx/eslint-plugin": "19.8.14",
     "@nx/jest": "19.8.14",
@@ -27,7 +27,7 @@
     "@nx/nest": "^19.8.14",
     "@nx/node": "19.8.14",
     "@nx/web": "19.8.14",
-    "@nx/webpack": "19.8.14",
+    "@nx/webpack": "^20.7.1",
     "@nx/workspace": "19.8.14",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -54,12 +54,13 @@
   },
   "dependencies": {
     "@nestjs/cache-manager": "^3.0.1",
-    "@nestjs/common": "^10.0.2",
-    "@nestjs/core": "^10.0.2",
+    "@nestjs/common": "^11.0.12",
+    "@nestjs/core": "^11.0.12",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-express": "^11.0.12",
     "@nx/next": "^20.7.1",
     "@prisma/client": "^6.5.0",
+    "audit": "^0.0.6",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "cache-manager-redis-store": "^3.0.1",
