--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@nx/nest": "^19.8.14",
     "@nx/next": "19.8.14",
     "@nx/node": "19.8.14",
+    "@nx/react": "19.8.14",
     "@nx/web": "19.8.14",
     "@nx/webpack": "^20.7.1",
     "@nx/workspace": "19.8.14",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "15.0.6",
