--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,8 @@
     "paths": {
       "@pure-workspace/data-access": ["libs/data-access/src/index.ts"],
       "@pure-workspace/domain": ["libs/domain/src/index.ts"],
+      "@pure-workspace/feature": ["libs/feature/src/index.ts"],
+      "@pure-workspace/feature/server": ["libs/feature/src/server.ts"],
       "@pure-workspace/prisma/general": ["prisma/generated/general"]
     }
   },
