--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
   },
   "private": true,
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
-    "@eslint/js": "^9.8.0",
     "@faker-js/faker": "^9.6.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^11.0.12",
@@ -29,14 +27,14 @@
     "@nx/jest": "19.8.14",
     "@nx/js": "19.8.14",
     "@nx/nest": "^19.8.14",
-    "@nx/next": "19.8.14",
+    "@nx/next": "^20.7.1",
     "@nx/node": "19.8.14",
-    "@nx/react": "19.8.14",
+    "@nx/react": "^20.7.1",
     "@nx/web": "19.8.14",
     "@nx/webpack": "^20.7.1",
     "@nx/workspace": "19.8.14",
     "@swc-node/register": "~1.9.1",
-    "@swc/cli": "~0.3.12",
+    "@swc/cli": "^0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "15.0.6",
@@ -49,7 +47,7 @@
     "@types/react-dom": "18.3.0",
     "babel-jest": "^29.7.0",
     "cypress": "^13.13.0",
-    "eslint": "^9.8.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^3.5.0",
@@ -85,7 +83,7 @@
     "cookie-parser": "^1.4.7",
     "ioredis": "^5.6.0",
     "nestjs-prisma": "^0.25.0",
-    "next": "14.2.3",
+    "next": "^14.2.26",
     "nookies": "^2.5.2",
     "prisma": "^6.5.0",
     "react": "18.3.1",
