--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@nestjs/cache-manager": "^3.0.1",
@@ -92,6 +93,7 @@
     "prisma": "^6.5.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.56.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "zod": "^3.24.2"
