--- a/package.json
+++ b/package.json
@@ -70,6 +70,11 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.0.1",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.12",
     "@nestjs/core": "^11.0.12",
@@ -88,6 +93,7 @@
     "prisma": "^6.5.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.56.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "zod": "^3.24.2"
