chore: add docker file from web pure digital configuration

--- a/apps/web/web-pure-digital/tsconfig.json
+++ b/apps/web/web-pure-digital/tsconfig.json
@@ -10,6 +10,7 @@
     "noEmit": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "emitDecoratorMetadata": false,
     "incremental": true,
     "plugins": [
       {
