--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "docker": "docker-compose up",
     "docker:postgres": "docker-compose -f docker-compose-postgres.yaml up",
     "build:server-pure-general": "nx build server-pure-general",
+    "build:web-pure-digital": "nx build web-pure-digital",
     "start:server-pure-general": "nx run server-pure-general:serve",
-    "start:web-pure-digital": "nx dev web-pure-digital",
-    "start:pure-digital": "npm run start:web-pure-digital & npm run start:server-pure-general"
+    "start:web-pure-digital": "nx dev web-pure-digital"
   },
   "private": true,
   "devDependencies": {
