refactor: ajust docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       context: .
       dockerfile: ./configs/docker/Dockerfile.web-pure-digital
     ports:
-      - '3000:3000'
+      - '${WEB_PURE_DIGITAL_PORT}:3000'
     environment:
       - NODE_ENV=production
     networks:
