--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@nx/next": "^20.1.4",
     "@nx/node": "19.8.14",
     "@nx/react": "^20.1.4",
-    "@nx/web": "19.8.14",
-    "@nx/webpack": "^20.7.1",
+    "@nx/web": "20.8.1",
+    "@nx/webpack": "20.8.1",
     "@nx/workspace": "19.8.14",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "^0.6.0",
