--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "@nestjs/core": "^11.0.12",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.12",
+    "@nestjs/platform-socket.io": "^11.1.2",
+    "@nestjs/websockets": "^11.1.2",
     "@prisma/client": "^6.5.0",
     "audit": "^0.0.6",
     "axios": "^1.6.0",
@@ -98,6 +100,7 @@
     "react-hook-form": "^7.56.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "socket.io": "^4.8.1",
     "zod": "^3.24.2"
   }
 }
