--- a/package.json
+++ b/package.json
@@ -95,12 +95,14 @@
     "next": "^14.2.26",
     "nookies": "^2.5.2",
     "prisma": "^6.5.0",
+    "qrcode": "^1.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.56.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "socket.io": "^4.8.1",
+    "whatsapp-web.js": "^1.28.0",
     "zod": "^3.24.2"
   }
 }
