--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:server-pure-general": "nx build server-pure-general",
     "build:web-pure-digital": "nx build web-pure-digital",
     "start:server-pure-general": "nx run server-pure-general:serve",
+    "start:server-pure-runner": "nx run server-pure-runner:serve",
     "start:web-pure-digital": "nx dev web-pure-digital"
   },
   "private": true,
@@ -102,7 +103,6 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "socket.io": "^4.8.1",
-    "whatsapp-web.js": "^1.23.0",
     "zod": "^3.24.2"
   }
 }
