--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "test:coverage": "npm run test -- --coverage",
     "prisma:generate:general": "prisma generate --schema=./prisma/general/schema.prisma",
     "prisma:migrate:general": "npx prisma migrate dev --schema=./prisma/general/schema.prisma",
+    "prisma:generate:marketing": "prisma generate --schema=./prisma/marketing/schema.prisma",
+    "prisma:migrate:marketing": "npx prisma migrate dev --schema=./prisma/marketing/schema.prisma",
     "docker": "docker-compose up",
     "docker:postgres": "docker-compose -f docker-compose-postgres.yaml up",
     "build:server-pure-general": "nx build server-pure-general",
     "build:web-pure-digital": "nx build web-pure-digital",
     "start:server-pure-general": "nx run server-pure-general:serve",
+    "start:server-pure-runner": "nx run server-pure-runner:serve",
     "start:web-pure-digital": "nx dev web-pure-digital"
   },
   "private": true,
@@ -30,8 +33,8 @@
     "@nx/next": "^20.1.4",
     "@nx/node": "19.8.14",
     "@nx/react": "^20.1.4",
-    "@nx/web": "19.8.14",
-    "@nx/webpack": "^20.7.1",
+    "@nx/web": "20.8.1",
+    "@nx/webpack": "20.8.1",
     "@nx/workspace": "19.8.14",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "^0.6.0",
@@ -80,6 +83,8 @@
     "@nestjs/core": "^11.0.12",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.12",
+    "@nestjs/platform-socket.io": "^11.1.2",
+    "@nestjs/websockets": "^11.1.2",
     "@prisma/client": "^6.5.0",
     "audit": "^0.0.6",
     "axios": "^1.6.0",
@@ -88,14 +93,16 @@
     "cookie-parser": "^1.4.7",
     "ioredis": "^5.6.0",
     "nestjs-prisma": "^0.25.0",
-    "next": "^14.2.26",
+    "next": "^15.3.2",
     "nookies": "^2.5.2",
     "prisma": "^6.5.0",
+    "qrcode": "^1.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.56.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "socket.io": "^4.8.1",
     "zod": "^3.24.2"
   }
 }
